--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>DevBoard</title>
+      <link rel="stylesheet" href="./styles/style.css">
       <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5"
       rel="stylesheet"
@@ -20,8 +21,9 @@
     <body class="bg-gray-100 poppins"> ">
       <!-- Top Navigation Bar -->
       <header class="bg-white shadow-md p-4 flex justify-between items-center">
-        <div class="flex items-center space-x-2">
-          <p class="text-2xl">Dev<span class="text-2xl font-bold">Board</span></p>
+        <div class="flex items-center space-x-2"> 
+          <img src="./resources/assets/logo.png" alt="">
+          <p class="text-2xl"> <span class="text-blue-400">Dev</span><span class="text-2xl font-bold">Board</span></p>
         </div>
         <div class="flex items-center space-x-4">
           <div class="flex items-center bg-gray-200 p-2 rounded-lg">
@@ -31,10 +33,10 @@
               class="bg-transparent outline-none px-2"
             />
           </div>
-          <button class="bg-blue-500 text-white px-4 py-2 rounded-lg">
+          <button id="increase-num" class="bg-blue-500 text-white px-4 py-2 rounded-lg">
             23
           </button>
-          <button class="bg-gray-300 rounded-full w-8 h-8"></button>
+          <button id="theme-change" class="bg-gray-300 rounded-full w-8 h-8"> <img src="./resources/assets/theme-btn.png" alt=""></button>
         </div>
       </header>
 
@@ -49,7 +51,7 @@
               <div class="bg-blue-500 text-white p-3 rounded-full">✔</div>
               <div>
                 <p class="text-gray-600">Task Assigned</p>
-                <h2 class="text-xl font-bold">6</h2>
+                <h2 id="decrease-num" class="text-xl font-bold">6</h2>
               </div>
             </div>
             <div class="flex items-center gap-1 bg-sky-500 transition-all duration-300 hover:scale-110">
@@ -75,7 +77,7 @@
               <p class="text-gray-600 mt-2 text-sm">
                 Deadline: <b>21 March 2025</b>
               </p>
-              <button class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
+              <button id="complete-1" class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
                 Completed
               </button>
             </div>
@@ -89,7 +91,7 @@
               <p class="text-gray-600 mt-2 text-sm">
                 Deadline: <b>25 March 2025</b>
               </p>
-              <button class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
+              <button id="complete-2" class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
                 Completed
               </button>
             </div>
@@ -103,7 +105,7 @@
               <p class="text-gray-600 mt-2 text-sm">
                 Deadline: <b>31 March 2025</b>
               </p>
-              <button class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
+              <button id="complete-3" class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
                 Completed
               </button>
             </div>
@@ -117,7 +119,7 @@
               <p class="text-gray-600 mt-2 text-sm">
                 Deadline: <b>21 March 2025</b>
               </p>
-              <button class="mt-3 bg-[#3752FD] text-white px-4 py-1 rounded">
+              <button id="complete-4" class="mt-3 bg-[#3752FD] text-white px-4 py-1 rounded">
                 Completed
               </button>
             </div>
@@ -132,7 +134,7 @@
               <p class="text-gray-600 mt-2 text-sm">
                 Deadline: <b>21 March 2025</b>
               </p>
-              <button class="mt-3 bg-[#3752FD] text-white px-4 py-1 rounded">
+              <button id="complete-5" class="mt-3 bg-[#3752FD] text-white px-4 py-1 rounded">
                 Completed
               </button>
             </div>
@@ -147,7 +149,7 @@
               <p class="text-gray-600 mt-2 text-sm">
                 Deadline: <b>21 March 2025</b>
               </p>
-              <button class="mt-3 bg-[#3752FD] text-white px-4 py-1 rounded">
+              <button id="complete-6" class="mt-3 bg-[#3752FD] text-white px-4 py-1 rounded">
                 Completed
               </button>
             </div>
@@ -157,11 +159,12 @@
         <!-- Activity Log -->
         <aside class="w-1/4 bg-white p-4 rounded-lg shadow-md">
           <h3 class="text-lg font-semibold">Activity Log</h3>
-          <button class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
+          <button id="clear-history" class="mt-3 bg-purple-600 text-white px-4 py-1 rounded">
             Clear History
           </button>
         </aside>
       </div>
+      <script src="./script/dom.js"></script>
     </body>
   </html>
 </html>
