--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             </div>
 
             <div class="bg-white p-4 shadow-md rounded-lg">
-              <p class="text-gray-500 text-sm">Shop Ease</p>
-              <h3 class="text-lg font-semibold">Fix Mobile Button Issue</h3>
+              <p class="text-gray-500 text-sm">Programming hero</p>
+              <h3 class="text-lg font-semibold">Fix video loading  Issue</h3>
               <p class="text-gray-500 text-sm">
                 A card component has a figure, a body part, and inside body
                 there are title and actions parts
